--- a/portafolio.html
+++ b/portafolio.html
@@ -71,10 +71,10 @@
             </article>
             <article class='col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 my-4'>
                 <div class="card mx-2 ">
-                    <img src="assets/img/Cuppon.png" class="card-img-top" alt='cuppon'>
+                    <img src="assets/img/Cuppon.png" class="card-img-top" alt='Cuppon'>
                     <div class="card-body">
                         <hr>
-                        <h6 class="card-title fs-1 fw-bold  text-center">cuppon</h6>
+                        <h6 class="card-title fs-1 fw-bold  text-center">Cuppon</h6>
 
                     </div>
                 </div>
