curriculum ahora es una seccion aparte. modificaciones navbar ajuste tamaño inicio

--- a/portafolio.html
+++ b/portafolio.html
@@ -24,7 +24,9 @@
             </button>
             <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-auto">
-                    <a class="nav-link  text-light m-2 p-0" aria-current="page" href="index.html">Curriculum</a>
+                    <a class="nav-link  text-light m-2 p-0" aria-current="page" href="index.html">Inicio</a>
+                    <a class="nav-link  text-light m-2 p-0" aria-current="page" href="curriculum.html">Curriculum</a>
+
                     <a class="nav-link  text-light m-2 p-0 " href="portafolio.html">Portafolio</a>
                 </div>
             </div>
