--- a/curriculum.html
+++ b/curriculum.html
@@ -35,22 +35,49 @@
         </div>
     </nav>
 
-    <header id=headercv class="header text-light py-5">
-        <div class="container-fluid ">
-                <h1 class="display-1 fw-bold py-5 mx-5">
-                    Jerónimo <br> Lucero <br> Rodriguez
-                </h1>
-                
+    <section id="headerexperiencia" class="bg-dark text-center py-1">
+        <div class="container-fluid">
+            <h2 class="display-3  fw-bold  text-light">Experiencia</h2>
         </div>
 
-    </header>
+    </section>
+
+    <section id="infoexperiencia" class="bg-secondary  py-1 text-center">
+        <div class="container-fluid">
+            <h3 class="fw-bold text-light display-6 m-1 text-decoration-underline">Monitor</h3>
+            <span class="fs-1 fw-light ">Vertical S.A.</span>
+            <p>Coordinación de actividades en programas de desarrollo de habilidades blandas.</p>
+            <hr>
+            <h3 class="fw-bold text-light display-6 m-1 text-decoration-underline">Atención al Cliente</h3>
+            <span class="fs-1 fw-light ">Bike New </span>
+            <p>Servicio al cliente y ventas en tienda especializada en bicicletas y productos para el ciclismo. </p>
+            <hr>
+            <h3 class="fw-bold text-light display-6 m-1 text-decoration-underline">Ayudante de Cocina</h3>
+            <span class="fs-1 fw-light ">Kaori Sushi </span>
+            <p>Ayudante de cocina en restaurante de comida japonesa</p>
+
+        </div>
+
+    </section>
+
+    <section id="headereducacion" class="bg-dark py-1">
+        <div class="container-fluid ">
+            <h2 class="display-3 fw-bold text-light text-center">Educación</h2>
+        </div>
+
+    </section>
+    <section id="infoeducacion" class="bg-secondary  py-1 text-center">
+        <div class="container-fluid">
+            <h3 class="fw-bold text-light display-6 text-decoration-underline">Desarollo Fullstack JavaScript</h3>
+            <p class="fs-1 fw-light">Desafio Latam</p>
+            <hr>
+            <h3 class="fw-bold text-light display-6 text-decoration-underline">Patronaje y Confección</h3>
+            <p class="fs-1 fw-light">Taller Ignacio M. Lechuga</p>
 
 
+        </div>
 
-
-
-
-
+    </section>
     <footer class="bg-dark">
         <p class="text-center fw-light text-light p-0 m-0">Jeronimo Lucero 2024. Todos los derechos reservados.</p>
     </footer>
@@ -58,6 +85,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
 </body>
 
-</html>
