--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 
     <header id=headercv class="header text-light py-5">
         <div class="container-fluid ">
-                <h1 class="display-1 fw-bold py-5 mx-5">
-                    Jerónimo <br> Lucero <br> Rodriguez
-                </h1>
-                
+            <h1 class="display-1 fw-bold py-5 mx-5">
+                Jerónimo <br> Lucero <br> Rodriguez
+            </h1>
+
         </div>
 
     </header>
@@ -52,7 +52,9 @@
 
 
     <footer class="bg-dark">
-        <p class="text-center fw-light text-light p-0 m-0">Jeronimo Lucero 2024. Todos los derechos reservados.</p>
+        <div class="footerdiv">
+            <p class="text-center fw-light text-light ">Jeronimo Lucero 2024. Todos los derechos reservados.</p>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
